--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,34 @@ Getting Started
 ---------------
 You need a Java 1.7 VM or later installed and a servlet container.
 
+================== Release 0.2.0 ==================
+
+Status
+------
+16 May 2013 release.
+
+Detailed Change list
+--------------------
+
+New features
+ 1.  New MyDAS configuration to serve IKMC allele
+ 2.  Proxy rules changed to serve the phenotype archive (using /data)
+ 3.  Spring dependencies resolved at load-time with component scanning
+ 4.  'Pre-QC' replaced with 'Preliminary' on the gene page
+ 5.  New version of the preliminary phenotype heatmap (1.2)
+ 6.  Interquartile Range (IQR) used to look at spread of the data (Q1 – 1.5×IQR
+     and Q3 + 1.5×IQR) on the box-plot
+ 7.  Decimal precision on the graph set to 4f 
+ 
+Data changes
+ 1.  MA term association to high-level terms updated
+ 2.  New SLIM generated for MP and MA terms
+   
+Bug fixes
+ 1.  Dalliance pop-up location issue fixed
+ 2.  Download all results from the search page actually works now
+ 3.  Image count discrepancy on the result grid fixed
+ 
 ================== Release 0.1.9 ==================
 
 Status
