add release notes for 0.2.3

--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,12 @@ Getting Started
 ---------------
 You need a Java 1.7 VM or later installed and a servlet container.
 
+================== Release 0.2.3 ==================
+
+Status
+------
+19 August 2013 release.
+
 ================== Release 0.2.2 ==================
 
 Status
